Making some optimizations, cleaning up a few things...